--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -52,6 +52,11 @@ page {
 .goods {
   padding: 20rpx;
   height: 120rpx;
+  white-space: nowrap;
+  width: 670rpx;
+}
+.more {
+  display: inline-block;
 }
 .imgs {
   height: 120rpx;
@@ -61,12 +66,16 @@ page {
 }
 .details {
   float: left;
-  margin-top: 20rpx;
+  height: 120rpx;
   width: 530rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 /* 两行缺省 */
 .name {
   overflow: hidden;
+  white-space: normal;
   text-overflow: ellipsis;
   display: box;
   display: -webkit-box;
