--- a/template/template.wxss
+++ b/template/template.wxss
@@ -105,6 +105,16 @@ picker-view-column view{
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 9999;
 }
+.search-wrapper {
+  display: flex;  
+  position: fixed;
+  left: 0;
+  bottom:0;
+  height: 93%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
+}
 .paid-element {
   /* display: flex; */
   position: fixed;
